--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/subscriber/CommandSubscriberForCommandLog.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/subscriber/CommandSubscriberForCommandLog.adoc
@@ -10,6 +10,8 @@ Implementation of xref:refguide:applib:index/services/publishing/spi/CommandSubs
 ----
 class CommandSubscriberForCommandLog {
   boolean isEnabled()
+  void onReady(Command command)
+  void onStarted(Command command)
   void onCompleted(Command command)
 }
 ----
